New-NavContainer will cache the files from Extract-FilesFromNavContainer for future usage instead of deleting them
New-CSideDevContainer has been removed - use New-NavContainer with -includeCSide instead
Added function Import-PfxCertificateToNavContainer
Feature request #238: Adding SynchronizeSchemaChanges parametar to Import-ObjectsToNavContainer

0.4.0.0
BugFix #207: Compile-AppInNavContainer is downloading symbols for app which is in the AppSymbolFolder
Include timezone parameter on Invoke-NavContainerCodeunit
Compile-AppInNavContainer checks existance of dependencies in app.json
Use .alpackages as default symbols folder
BugFix #216: enableSymbolLoading only works with includeCSide
BugFix #215: Naming symbol-files when compiling with Compile-AppInNavContainer
Display progress when pulling and avoid deadlocks when running using New-NavContainer
Bugfix Get-AzureADUser didn't always retrieve the user needed
New-NavContainer automatically detects best os version of generic image
Bugfix: navdvdpath didn't work when pointing to a url which was case sensitive
Feature #232: added tenant parameter to Get-NavContainerAppInfo
Added function Extract-FilesFromNavContainerImage to extract the files from a Nav Container image
Added parameter UseBestContainerOS to tell New-NavContainer to spin up a container based on the best compatible generic image.
Added parameter TestToolkitCountry to import-TestToolkitToNavContainer

0.3.1.4
BugFix Convert-ModifiedObjectsToAl failed after the newly introduced [LineStart()] property in newsyntax export

0.3.1.3
Bugfix #202: NavDvd tempfolder was not deleted when using a navdvd.zip file
Added function Convert-CALTestOutputToAzureDevOps to convert CAL Test Runner output to XUnit Test Xml for Azure DevOps
Added function Convert-CALExecutionTimeToTimeSpan to convert text based ExecutionTime to System.TimeSpan
Added parameter doNotSaveData to UnInstall-NavContainerApp and UnPublish-NavContainerApp

0.3.1.2